--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.17.2",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "moment": "^2.29.1",
     "plotly.js": "^2.6.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
